Add iOS safety plan acknowledgement
